# posts-api

./: .gitignore  pyproject.toml
app/: main.py  schemas.py
